--- a/careervibe-frontend/package.json
+++ b/careervibe-frontend/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
-    "framer-motion": "^12.18.1",
+    "framer-motion": "^12.19.2",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2"
@@ -29,6 +30,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.5",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^6.3.5"
   }
 }
