--- a/careervibe-backend/.env
+++ b/careervibe-backend/.env
@@ -1,3 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/careervibe
+MONGO_URI=mongodb://127.0.0.1:27017/careervibe
 JWT_SECRET=supersecretkey123
+MODE_ENV=development
+port=5000
