--- a/careervibe-frontend/package.json
+++ b/careervibe-frontend/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "framer-motion": "^12.19.2",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
