--- a/careervibe-backend/.env
+++ b/careervibe-backend/.env
@@ -1,5 +1,5 @@
+MONGO_URI=mongodb://localhost:27017/careervibe
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/careervibe
 JWT_SECRET=supersecretkey123
 MODE_ENV=development
-port=5000
+SESSION_SECRET=supersecretkey
