--- a/careervibe-frontend/package.json
+++ b/careervibe-frontend/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
+    "axios": "^1.11.0",
     "framer-motion": "^12.19.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2"
